--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "build": "echo 'No build step needed'"
+    "build": "npm install"
   },
   "dependencies": {
     "axios": "^1.6.0",
